tests/proph/vec_std_proph.stderr
warning: unused imports: `Prophecised`, `lemma`
  --> ../tests/proph/vec_std_proph.rs:12:25
   |
12 |     macros::{assertion, lemma, predicate, specification},
   |                         ^^^^^
13 |     mutref_auto_resolve,
14 |     prophecies::{Ownable, Prophecised},
   |                           ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
error: non-local predicate "gilogic::prophecies::prophecy_auto_update_spec_070f7496_6ce1_4994_8b8e_b4d429061685::<T>"

error: aborting due to 1 previous error; 1 warning emitted

